Feat(Swagger): add & delete ticket product
